<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Citire Apometre Pro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Citire">Citire</string>
    <string name="TabelConsum">Tabel Consum</string>
    <string name="Setari">Setari</string>
    <string name="title_activity_fragment__citire">Citire</string>
    <string name="title_activity_fragment__tabel_consum">Fragment_TabelConsum</string>
    <string name="title_activity_fragment__setari">Setari</string>
    <string name="title_activity_citire">Citire</string>
    <string name="title_activity_tabel">Tabel</string>
    <string name="title_activity_setari">Setari</string>
    <string name="Adauga">Adauga</string>
    <string name="Sterge">Sterge</string>
    <string name="Editeaza">Editeaza</string>
    <string name="Camera">Camera</string>
    <string name="title_activity_setari_camera">SetariCamera</string>
    <string name="title_activity_setari_persoana">SetariPersoanaActivity</string>
    <string name="title_activity_setari_fragment">SetariFragmentActivity</string>
    <string name="data">Data</string>

    <string name="Calda">Calda</string>
    <string name="Rece">Rece</string>
    <string name="DataZiLunaAn">Data (zi-luna-an):</string>
    <string name="Modifica">Modifica</string>
    <string name="Salvare">Salvare</string>
    <string name="CitireTab">CITIRE</string>
    <string name="ConsumTab">CONSUM</string>
    <string name="GraficTab">GRAFIC</string>
    <string name="SetariTab">SETARI</string>
    <string name="Camere">Camere</string>
    <string name="Locuinte">Locuinte</string>
    <string name="Nume">Nume</string>
    <string name="Bloc">Bloc</string>
    <string name="Scara">Scara</string>
    <string name="Etaj">Etaj</string>
    <string name="Apartament">Apartament</string>
    <string name="NrPersoane">Nr. persoane</string>
    <string name="Email">Email</string>
    <string name="Total">Total</string>
    <string name="Consum">Consum</string>
    <string name="Ian">Ian</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="Mai">Mai</string>
    <string name="Iun">Iun</string>
    <string name="Iul">Iul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="Ianuarie">IANUARIE</string>
    <string name="Februarie">FEBRUARIE</string>
    <string name="Martie">MARTIE</string>
    <string name="Aprilie">APRILIE</string>
    <string name="Maii">MAI</string>
    <string name="Iunie">IUNIE</string>
    <string name="Iulie">IULIE</string>
    <string name="August">AUGUST</string>
    <string name="Septembrie">SEPTEMBRIE</string>
    <string name="Octombrie">OCTOMBRIE</string>
    <string name="Noiembrie">NOIEMBRIE</string>
    <string name="Decembrie">DECEMBRIE</string>
    <string name="Despre">Despre</string>
    <string name="DezvoltataDe">Aplicatie dezvoltata de:</string>
    <string name="E_mail">E-mail:</string>
    <string name="Telefon">Telefon:</string>
    <string name="EditConsum">Editare consum</string>
    <string name="Editare">Editare</string>
    <string name="Export_PDF">Export PDF</string>
    <string name="StergetiCamera">Stergeti camera</string>
    <string name="Da">Da</string>
    <string name="Nu">Nu</string>
    <string name="OK">OK</string>
    <string name="Cancel">Anulati</string>
    <string name="Fisierul_a_fost_salvat_pe_cardul_de_memorie_in_directorul">Fisierul a fost salvat pe cardul de memorie in directorul</string>
    <string name="Nu_exista_date_pe_luna_precedenta">Nu exista date pe luna precedenta</string>
    <string name="Nu_e_instalata_nici_o_aplicatie_pentru_a_vedea_fisierul_PDF">Nu e instalata nici o aplicatie pentru a vedea fisierul PDF</string>
    <string name="Nu_se_poate_accesa_cardul_de_memorie">Nu se poate accesa cardul de memorie</string>
    <string name="Consum_contorizat_in_apartament_pe_luna">Consum contorizat</string>
    <string name="An">an</string>
    <string name="Data_citirii">Data citirii</string>
    <string name="Semnatura">Semnatura</string>
    <string name="Apa_rece">Apa rece</string>
    <string name="Apa_calda">Apa calda</string>
    <string name="Index_nou">Index nou</string>
    <string name="Index_vechi">Index vechi</string>
    <string name="CitireApometre">CitireApometre Pro</string>
    <string name="Locuinta">Locuinta 1</string>
    <string name="Bucatarie">Bucatarie</string>
    <string name="Baie">Baie</string>
    <string name="Trebuie_completate_minim_3_luni_cu_date_despre_consum_pentru_a_putea_desena_graficul">
        Trebuie completate minim 3 luni cu date despre consum pentru a putea desena graficul
    </string>
    <string name="Limba">Limba</string>
    <string name="Consumul_a_fost_salvat">Consumul a fost salvat</string>
    <string name="Salvare_efectuata">Salvare efectuata</string>
    <string name="Backup">Salveaza datele(backup)</string>
    <string name="Restore">Restaureaza datele</string>
    <string name="Restaurare_efectuata">Restaurare efectuata</string>
    <string name="Backup_efectuat_la">Salvare facuta la: </string>
    <string name="Add_camera">Adauga Camera</string>
    <string name="Edit_camera">Editeaza Camera</string>
    <string name="Add_locuinta">Adauga Locuinta</string>
    <string name="Edit_locuinta">Editeaza Locuinta</string>
    <string name="Info_permisiuni">Aplicatia are nevoie de acces la cardul de memorie pentru a salva datele.</string>
</resources>
