<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="300dp"
              android:layout_height="match_parent"
              android:layout_marginLeft="10dp"
              android:padding="10dp">

          <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nume"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/txtNume"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bloc"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/txtBloc"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Scara"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/txtScara"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Etaj"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/txtEtaj"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Apartament"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/txtApartament"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NrPersoane"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/txtNrPersoane"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <!--<Button-->
                <!--android:id="@+id/btnSave"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/btn_selection_general_material_design"-->
                <!--android:text="@string/Salvare"-->
                <!--/>-->

            <!--<Button-->
                <!--android:id="@+id/btnDelete"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/btn_selection_general_material_design"-->
                <!--android:text="@string/Sterge"-->
                <!--/>-->

            <ImageButton android:id="@+id/btnSave"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:scaleType="fitCenter"
                         android:padding="10dp"
                         android:background="@drawable/btn_round"
                         android:src="@drawable/baseline_check_white_48"
                         android:layout_gravity="center"/>

            <View android:id="@+id/spacer_buttons_locuinta"
                android:layout_width="50dp"
                android:layout_height="1dp"></View>

            <ImageButton android:id="@+id/btnDelete"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:scaleType="fitCenter"
                         android:padding="10dp"
                         android:background="@drawable/btn_round"
                         android:src="@drawable/baseline_delete_white_48"
                         android:layout_gravity="center"/>

        </LinearLayout>

</LinearLayout>